# cynthion-uac

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
slides/: index.html  slides.md
slides/css/: styles.css
uac/: clockgen.py  dac.py  dsp.py  nco.py  request.py  stream.py  top.py  uac2.py  vu.py
